--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                     <div class="work-item">
                         <a class="work-link-1" href="https://www.britannica.com/topic/Girl-with-a-Pearl-Earring-by-Vermeer" target="_blank">
-                            <img src="img/pearl.jpg">
+                            <img src="img/pearl2.png">
                             <span class="name">Pearl Earring</span>
                             <span class="language two no-left-margin">Johannes Vermeer</span>
                             <span class="language two">1665</span>
@@ -120,7 +120,7 @@
                     </div>
                     <div class="work-item">
                         <a class="work-link-1" href="https://www.britannica.com/topic/The-Kiss-painting-by-Klimt" target="_blank">
-                            <img src="img/kiss.jpg">
+                            <img src="img/kiss2.png">
                             <span class="name">The Kiss</span>
                             <span class="language two no-left-margin">Gustav Klimt</span>
                             <span class="language two">1907–1908</span>
