--- a/index.html
+++ b/index.html
@@ -102,10 +102,8 @@
                     </div>
                 </div>
                 <div class="window-body work-body">
-                    <div class="clearfix"></div>
-                    <p>Vanlue Art '24, I'm Landen👋🏼,</p>
-                    <p>This is my Art Project For Mrs. Musgrave (Fav Art Teacher)</p>
-                    <p>I love making websites so i asked my teacher if i could make a website using art themed, and include different art! Becuase some of the meaning of art is skill and expressing important ideas or feelings, ive now put art into a skill/imagination i had. Some Definition of Art is something that is created with imagination and skill, expressing important ideas or feelings.</p>
+                    <div class="work-item">
+                        <a class="work-link-1" href="https://www.britannica.com/topic/The-Starry-Night" target="_blank">
                             <img src="img/starrynight.png">
                             <span class="name">Starry Night</span>
                             <span class="language two no-left-margin">Vincent Van Gogh</span>
