--- a/index.html
+++ b/index.html
@@ -88,10 +88,15 @@
                 </div>
                 <div class="window-body about-body">
                     <div class="clearfix"></div>
-                    <p>Vanlue Art '24, I'm Landen👋🏼,</p>
-                    <p>This is my Art Project For Mrs. Musgrave (Fav Art Teacher)</p>
-                    <p>I love making websites so i asked my teacher if i could make a website using art themed, and include different art! Becuase some of the meaning of art is skill and expressing important ideas or feelings, ive now put art into a skill/imagination i had. Some Definition of Art is something that is created with imagination and skill, expressing important ideas or feelings.</p>
-                </div>
+                    <p>Vanlue Art '24 - Hi, I'm Landen! 👋🏼</p>
+                    <p>This is my art project for Mrs. Musgrave, my favorite art teacher.</p>
+                    <p>
+                        I love creating websites, so I asked my teacher if I could combine my passion for web design with an art theme. This site showcases different forms of art and celebrates the meaning behind it. 
+                    </p>
+                    <p>
+                        Art is about skill, imagination, and expressing important ideas or feelings. By merging my skills and creativity, I've created this project to explore how art and technology can work together. The definition of art often includes something created with imagination and skill, and that's exactly what I wanted to capture here.
+                    </p>
+                </div>                
             </div>
 
             <div class="explorer-window work-explorer" tabindex="0">
