--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 </div>
                 <div class="clearfix"></div>
                 <div class="app-icon contact">
-                    <a href="https://www.vanlueschool.org" target="_blank" rel="noopener">
+                    <a href="https://pearlism.github.io/art-project-2/" target="_blank" rel="noopener">
                         <i class="fa fa-envelope fa-2x"></i>
-                        <span>Contact</span>
+                        <span>Artists With Disabilities</span>
                     </a>
                 </div>
                 <div class="clearfix"></div>
