--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="clearfix"></div>
                 <div class="app-icon contact">
-                    <a href="https://pearlism.github.io/art-project-2/" target="_blank" rel="noopener">
+                    <a href="https://artdisabilities.vanlueart.com/" target="_blank" rel="noopener">
                         <i class="fa fa-envelope fa-2x"></i>
                         <span>Artists With Disabilities</span>
                     </a>
